# TensorProductTest

./: .gitignore  CMakeLists.txt  TensorProductCUDA.cu  TensorProductCUDA.hpp  TensorProductCUDA_TC.cu  TensorProductCUDA_TC.hpp  TensorProductVolumeOccaKernels.hpp  cutensorProduct.hpp  cutensorWrap.hpp  main.cpp  setup_triton_env.sh  triton_benchmark_report.tex  triton_tensor_product.py
